@startuml

title Pigeon-swarm - Nodes Context

package "nodes" {
  package "domain" {
    class Node <AggregateRoot> {
      -id: NodeId
      -networks: Map<NetworkId, Network>
      -owner?: IdentityId
      +addNetwork(network: Network): void
      +assignOwner(owner: IdentityId, authenticatedIdentityId: IdentityId): void
      +hasOwner(): boolean
      +isOwnedBy(identityId: IdentityId): boolean
      +toPrimitives(): object
    }

    class Network {
      -id: NetworkId
      -name: NetworkName
      -key?: NetworkKey
      +isPublic(): boolean
      +getName(): NetworkName
      +toPrimitives(): object
    }

    class NodeNetworkWasAdded <DomainEvent> {
      +eventName(): string
    }

    class NodeHeartbeatWasSent <DomainEvent> {
      +eventName(): string
    }

    class NodePeer {
      -id: NodeId
      -owner?: IdentityId
      -networks: NodePeerNetwork[]
      -lastSeenAt: Timestamp
      +toPrimitives(): object
    }

    class NodePeerNetwork {
      -id: NetworkId
      -name: NetworkName
      -type: NodePeerNetworkType
      +toPrimitives(): object
    }

    class NodeOwnerCanOnlyBeChangedByCurrentOwnerError <DomainError>

    class NetworkId
    class NetworkName
    class NetworkKey
    class NodePeerNetworkType

    Node o--> "0..N" Network
    Node ..> NodeNetworkWasAdded
    NodePeer o--> "0..N" NodePeerNetwork
    NodePeer --> NodeId
    NodePeerNetwork *--> NodePeerNetworkType
    Node ..> NodeOwnerCanOnlyBeChangedByCurrentOwnerError
    Network *--> NetworkId
    Network *--> NetworkName
    Network --> NetworkKey

    class NodeRepository <interface> {
      +loadLocalNode(): Promise<Node>
      +saveLocalNode(node: Node): Promise<void>
    }

    class NodeLoaderService {
      -repository: NodeRepository
      +loadNode(): Promise<Node>
    }

    class NodeSaverService {
      -repository: NodeRepository
      +saveNode(node: Node): Promise<void>
    }

    interface NodePeerRepository {
      +save(peer: NodePeer): Promise<void>
      +findActive(): Promise<NodePeer[]>
    }

    NodeRepository o--> Node
    NodePeerRepository o--> NodePeer
    NodeLoaderService --> NodeRepository
    NodeSaverService --> NodeRepository
  }

  package "application" {
    class NodeNetworkAdder {
      -loader: NodeLoaderService
      -saver: NodeSaverService
      -eventPublisher: DomainEventPublisher
      +addNetwork(message: NodeNetworkAdderMessage): Promise<void>
      +addPublicNetwork(message: NodePublicNetworkAdderMessage): Promise<void>
    }

    class NodeNetworkRemover {
      -loader: NodeLoaderService
      -saver: NodeSaverService
      -cleaner: NodeNetworkDataCleaner
      -eventPublisher: DomainEventPublisher
      +remove(message: NodeNetworkRemoverMessage): Promise<void>
    }

    class NodeNetworkAdderMessage {
      -network: Network
    }

    class NodePublicNetworkAdderMessage {
      -network: Network
    }

    class NodeNetworkRemoverMessage {
      +networkId: NetworkId
      +constructor(networkId: string)
    }

    interface NodeNetworkDataCleaner {
      +clean(networkId: NetworkId): Promise<void>
    }

    class NodeOwnerAssignerMessage {
      +owner: IdentityId
      +authenticatedIdentityId: IdentityId
      +constructor(owner: string, authenticatedIdentityId: string)
    }

    class NodeLoader {
      -nodeLoaderService: NodeLoaderService
      +loadNode(): Promise<Node>
    }

    class NodeOwnerAssigner {
      -loader: NodeLoaderService
      -saver: NodeSaverService
      +assignOwner(message: NodeOwnerAssignerMessage): Promise<void>
    }

    class NodeHeartbeatSender {
      +send(): Promise<void>
    }

    class NodePeerRegistrar {
      +register(message: NodePeerRegisterMessage): Promise<void>
    }

    class NodePeersFinder {
      +find(): Promise<ActiveNodePeers>
    }

    class ActiveNodePeers {
      +getLocalNode(): Node
      +getPeers(): NodePeer[]
    }

    class NodeNetworkSynchronizationFinder {
      +find(): NodeNetworkSynchronizationStatus
    }

    abstract class NodeNetworkSynchronizationMonitor

    NodeNetworkAdder --> NodeLoaderService
    NodeNetworkAdder --> NodeSaverService
    NodeNetworkAdder --> NodeNetworkAdderMessage
    NodeNetworkAdder --> NodePublicNetworkAdderMessage
    NodeNetworkRemover --> NodeLoaderService
    NodeNetworkRemover --> NodeSaverService
    NodeNetworkRemover --> NodeNetworkDataCleaner
    NodeNetworkRemover --> NodeNetworkRemoverMessage
    NodeLoader --> NodeLoaderService
    NodeOwnerAssigner --> NodeLoaderService
    NodeOwnerAssigner --> NodeSaverService
    NodeOwnerAssigner --> NodeOwnerAssignerMessage
    NodeHeartbeatSender --> NodeLoaderService
    NodeHeartbeatSender ..> NodeHeartbeatWasSent
    NodePeerRegistrar --> NodePeerRepository
    NodePeersFinder --> NodePeerRepository
    NodePeersFinder --> NodeRepository
    NodeNetworkSynchronizationFinder --> NodeNetworkSynchronizationMonitor
  }

  package "infrastructure" {
    class LocalNodeMetadataRepository {
      -networkRegistry: IPFSNetworkRegistry
      +loadLocalNode(): Promise<Node>
      +saveLocalNode(node: Node): Promise<void>
    }

    class LocalNodePeerRepository {
      +save(peer: NodePeer): Promise<void>
      +findActive(): Promise<NodePeer[]>
    }

    note right of LocalNodeMetadataRepository
      Active node metadata repository.
      Local embedded storage owns nodeId, owner and
      configured network metadata.
      Loading and saving synchronizes
      the runtime IPFSNetworkRegistry.
    end note

    LocalNodeMetadataRepository ..|> NodeRepository
    LocalNodePeerRepository ..|> NodePeerRepository
  }
}

@enduml
